Fix Paths.get